@@ -1,3 +1,7 @@
+2011-09-17  Valentin Hilbig  <tino@zoo.03.softkill.net>
+
+	* put.h (tino_put_ansi_start, tino_put_ansi_end): added
+
 2011-07-29  Valentin Hilbig  <tino@zoo.03.softkill.net>
 
 	* ex.h (tino_vpexit): fixing a tail recoursion (endless loop) on
@@ -13,6 +17,10 @@
 	then return -2 (as before), else tino_exit_default_code.
 
 	* ex.h (TINO_EXIT_DEFAULT_CODE): added
+
+2011-04-12  Valentin Hilbig  <tino@minotaurus.03.softkill.net>
+
+	* put.h (tino_put_ansi_c): added (from tino_put_ansi_buf)
 
 2011-04-12  Valentin Hilbig  <tino@zoo.03.softkill.net>
 
